# Riru-ClipboardWhitelist

./: .gitignore  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
.github/: stale.yml
.github/workflows/: publish-update-json.yaml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: ic_icon.xml  ic_notify.xml
app/src/main/res/layout/: app_adapter.xml  main_activity.xml
app/src/main/res/menu/: main.xml
app/src/main/res/mipmap/: ic_launcher_round.xml
app/src/main/res/values/: dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
buildSrc/: build.gradle.kts
buildSrc/src/main/java/: ExtractApkTask.kt  Files.kt  GenerateChecksumTask.kt  GenerateMagiskTask.kt  HideapiRedefinePlugin.kt  HideapiRedefineTransform.kt  MergeMagiskTask.kt  PackageMagiskTask.kt  RiruExtension.kt  RiruPlugin.kt
gradle/wrapper/: gradle-wrapper.properties
hideapi/: build.gradle  build.gradle.kts
hideapi/src/main/: AndroidManifest.xml
hideapi/src/main/java/$android/app/: ActivityManager.java
hideapi/src/main/java/$android/os/: UserManager.java
hideapi/src/main/java/$android/provider/: Settings$Secure.java
hideapi/src/main/java/android/app/: ActivityManagerHidden.java  ActivityManagerNative.java  ActivityThread.java  ContextImpl.java  IActivityManager.java  IApplicationThread.java
hideapi/src/main/java/android/content/: IClipboard.java  IOnPrimaryClipChangedListener.java
hideapi/src/main/java/android/os/: IPermissionController.java  IServiceManager.java  ServiceManager.java  ServiceManagerNative.java  (+4 more)
module/: build.gradle  build.gradle.kts  proguard-rules.pro
module/src/main/: AndroidManifest.xml
module/src/main/assets/: service.sh
module/src/main/assets/customize.d/: 50-migrate-legacy-data.sh  51-create-update-flags.sh  90-migrate-legacy-data.sh  91-restore-data-permissions.sh
module/src/main/cpp/: CMakeLists.txt  hook.c  hook.h  inject.c  inject.h  log.h  main.c  utils.c  utils.h
module/src/main/cpp/libriru_utils/: CMakeLists.txt  riru_utils.c  riru_utils.h
module/src/main/cpp/libriru_utils/libriru/: CMakeLists.txt  README.txt
module/src/main/cpp/libriru_utils/libxhook/: CMakeLists.txt  README.txt
module/src/main/raw/: customize.sh  module.prop  post-fs-data.sh  riru.sh  service.sh
module/src/main/raw/magisk/: customize.sh  install.sh  module.prop  uninstall.sh
module/src/main/raw/riru/: module.prop.new
shared/: build.gradle.kts
shared/src/main/: AndroidManifest.xml
(+45 files in other folders)
